Simulation and reality

--- a/_posts/2015-04-08-Entropy.md
+++ b/_posts/2015-04-08-Entropy.md
@@ -55,7 +55,7 @@ In a Many-worlds interpretation, things are different: every time that a measure
 
 
 <div style="text-align:center" markdown="1">
-![]({{ site.url }}/assets/images/post_quantum_part/many-worlds.png)
+![]({{ site.url }}/assets/images/post_quantum_part/many-worlds.png "Many-worlds interpretation")
 </div>
 
 ######Many-worlds interpretation (Credit: http://en.wikipedia.org)
@@ -74,7 +74,7 @@ The [double-slit experiment](http://en.wikipedia.org/wiki/Double-slit_experiment
 
 
 <div style="text-align:center" markdown="1">
-![]({{ site.url }}/assets/images/post_quantum_part/double_slit.jpg)
+![]({{ site.url }}/assets/images/post_quantum_part/double_slit.jpg "Double-slit experiment")
 </div>
 
 ######Double-slit experiment (Credit: http://www.physicsoftheuniverse.com)
