--- a/_posts/2015-04-08-Entropy.md
+++ b/_posts/2015-04-08-Entropy.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category : Physics
-tags: [quantum physics, computational Universe, many-worlds, entropy]
+tags: [quantum physics, computational universe, many-worlds, thermodynamics, entropy, information]
 image : post_quantum_part/entropia.jpg
 tagline: There are many, many, many worlds branching out at each moment you become aware of your environment and then make a choice ― Kevin Michel, Moving Through Parallel Worlds To Achieve Your Dreams
 ---
